test(pom): add dependecies for testing
added rest assured and junit dependency, suiteXmlFile, ArgumentLine
configs included