@@ -173,6 +173,16 @@
 		    <artifactId>junit</artifactId>
 		    <scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-engine</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<dependency>
+		    <groupId>io.rest-assured</groupId>
+		    <artifactId>rest-assured</artifactId>
+		</dependency>
 
 		
 	</dependencies>
@@ -210,12 +220,20 @@
                             VerticalTestAuditAUTH.xml
                         </suiteXmlFile>
                     </suiteXmlFiles>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                 </configuration>
             </plugin>
-           <!-- <plugin>
+           <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.22.2</version>
-            </plugin>-->
+                    <configuration>
+	                    <argLine>
+	                        --illegal-access=permit
+	                    </argLine>
+                    </configuration>
+            </plugin>
 
         </plugins>
     </pluginManagement>
